# agent-host-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Package.swift  README.md  RELEASING.md  THREAT_MODEL.md  eslint.config.mjs  marketplace.json  package-lock.json  package.json  tsconfig.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/instructions/: general-instructions.instructions.md
.github/prompts/: publish-rust.prompt.md
.github/workflows/: ci.yml  conformance.yml  format-generated.yml  publish-dotnet.yml  publish-go.yml  publish-kotlin.yml  publish-rust.yml  publish-spec.yml  publish-swift.yml  publish-typescript.yml
clients/dotnet/: .editorconfig  AGENTS.md  AgentHostProtocol.sln  AgentHostProtocol.slnx  CHANGELOG.md  Directory.Build.props  README.md  TELEMETRY.md  release-metadata.json
clients/go/: AGENTS.md  CHANGELOG.md  README.md  go.mod  release-metadata.json
clients/kotlin/: AGENTS.md  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  pipeline.yml  release-metadata.json  settings.gradle.kts
clients/rust/: CHANGELOG.md  Cargo.toml  MULTI_HOST.md  README.md  release-metadata.json
clients/rust/crates/ahp/: Cargo.toml  README.md
clients/rust/crates/ahp-types/: Cargo.toml  README.md
clients/rust/crates/ahp-types/src/: actions.rs  commands.rs  common.rs  errors.rs  lib.rs  messages.rs  notifications.rs  state.rs  telemetry.rs  version.rs
clients/rust/crates/ahp-types/tests/: roundtrip_corpus.rs  types_round_trip.rs
clients/rust/crates/ahp-ws/: Cargo.toml  README.md
clients/rust/crates/ahp-ws/src/: lib.rs  transport.rs
clients/rust/crates/ahp/examples/: connect_ws.rs  otel_export.rs  reducers_demo.rs
clients/rust/crates/ahp/src/: client.rs  error.rs  lib.rs  multi_host_state_mirror.rs  reducers.rs  state_mirror.rs  telemetry.rs  transport.rs
clients/rust/crates/ahp/src/hosts/: client_id_store.rs  factory.rs  mod.rs  multi.rs  policy.rs  runtime.rs  types.rs
clients/rust/crates/ahp/tests/: client_roundtrip.rs  file_client_id_store.rs  hosts.rs  multi_host_state_mirror.rs  state_mirror.rs  telemetry_emission.rs
clients/swift/: AGENTS.md  CHANGELOG.md  MULTI_HOST.md  release-metadata.json
clients/typescript/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pipeline.yml  release-metadata.json  tsconfig.json
conformance/: .gitignore  README.md  REPORT.md  run-corpus.sh  run.sh
conformance/ci/: coverage-floor.json  gate.mjs
conformance/discovery/: README.md  SCHEMA.md  package.json
conformance/go/: go.mod  run.sh  runner.go
conformance/host/: host.mjs  package-lock.json  package.json  run-scenario.sh  scenario-host.mjs  scenario-smoke.mjs
conformance/kotlin/: build.gradle.kts  run.sh  settings.gradle.kts
conformance/mutation/: .gitignore  DECISION.md  README.md  mutation-summary.json  package-lock.json  package.json  replay-corpus.mjs  stryker.conf.json
conformance/runner/: conformance-suite.mjs  package-lock.json  package.json  run-conformance.mjs  run.sh
conformance/rust/: Cargo.toml
conformance/rust/src/: main.rs
conformance/swift/: Package.swift
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: actions.md  agents.md  ahp-and-acp.md  architecture.md  changesets.md  clients-multi-host.md  customizations.md  design.md  elicitation.md  getting-started.md  hosts.md  implementations.md  mcp.md  reconciliation.md  state-model.md  terminals.md  what-is-ahp.md
docs/proposals/: multi-chat-sessions.md  multi-chat.md
docs/reference/: actions.md  commands.md  messages.md  notifications.md  state-types.md
docs/specification/: authentication.md  chat-channel.md  chunking.md  lifecycle.md  mcp-channel.md  overview.md  resource-watch-channel.md  root-channel.md  self-instrumentation.md  session-channel.md  subscriptions.md  telemetry-channel.md  terminal-channel.md  transport.md  versioning.md
examples/rust/: Cargo.toml  README.md
examples/rust/crates/ahp/: Cargo.toml
examples/rust/crates/ahp-types/: Cargo.toml
examples/rust/crates/ahp-types/src/: actions.rs  commands.rs  errors.rs  messages.rs  notifications.rs  state.rs
examples/rust/crates/ahp-ws/: Cargo.toml
examples/rust/crates/ahp-ws/src/: lib.rs  transport.rs
examples/rust/crates/ahp/src/: client.rs  reducers.rs
examples/rust/crates/ahp/tests/: client_roundtrip.rs
examples/swift/: AGENTS.md
examples/swift/DevTunnelsBridge/rust/: Cargo.toml  uniffi.toml
examples/swift/DevTunnelsBridge/rust/src/: lib.rs
extensions/codamente/: README.md  package-lock.json  package.json  tsconfig.json
plugins/channels-migration-plugin/: README.md
plugins/copilot-plugin/: .mcp.json  README.md
plugins/session-metadata-migration-plugin/: README.md
schema/: actions.schema.json  commands.schema.json  errors.schema.json  notifications.schema.json  state.schema.json
scripts/: find-protocol-sources.ts  generate-action-origin.ts  generate-csharp.ts  generate-go.ts  generate-json-schema.ts  generate-kotlin.ts  generate-markdown.ts  generate-release-metadata.ts  generate-rust.ts  generate-swift.ts  generate-typescript.ts  generate.ts  read-error-codes.ts  read-protocol-versions.ts  read-telemetry.test.ts  read-telemetry.ts  verify-changelog.ts  verify-generated.ts  verify-release-metadata.ts
scripts/git-hooks/: pre-push
types/: action-origin.generated.ts  actions.ts  commands.ts  errors.ts  index.ts  messages.test.ts  messages.ts  notifications.ts  reducers.test.ts  reducers.ts  state.ts  tsconfig.json
types/channels-annotations/: actions.ts  reducer.ts  state.ts
types/channels-changeset/: actions.ts  commands.ts  reducer.ts  state.ts
types/channels-chat/: actions.ts  commands.ts  reducer.ts  state.ts
types/channels-comments/: actions.ts  commands.ts  reducer.ts  state.ts
types/channels-otlp/: notifications.ts  state.ts
types/channels-resource-watch/: actions.ts  commands.ts  reducer.ts  state.ts
types/channels-root/: actions.ts  commands.ts  notifications.ts  reducer.ts  state.ts
types/channels-session/: actions.ts  commands.ts  reducer.ts  state.ts
types/common/: actions.ts  (+6 more)
(+794 files in other folders)
