[workspace]
resolver = "2"
members = [
    "crates/ahp-types",
    "crates/ahp",
    "crates/ahp-ws",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/microsoft/agent-host-protocol"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = "0.7"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
ahp-types = { path = "crates/ahp-types", version = "0.1.0" }
ahp = { path = "crates/ahp", version = "0.1.0" }
