[package]
name = "ahp-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol types for the Agent Host Protocol (AHP)."
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
