[package]
name = "ahp-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket transport adapter for the Agent Host Protocol SDK."
readme = "README.md"
homepage = "https://microsoft.github.io/agent-host-protocol/"
documentation = "https://docs.rs/ahp-ws"
keywords = ["ahp", "agent", "websocket", "transport", "tokio"]
categories = ["api-bindings", "asynchronous", "artificial-intelligence", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ahp = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
thiserror = { workspace = true }
url = "2"
