[package]
name = "dev-tunnels-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "dev_tunnels_bridge"

[dependencies]
# UniFFI for generating Swift/Kotlin bindings
uniffi = { version = "0.28", features = ["cli"] }

# Dev Tunnels SDK (TODO: verify crate name and availability)
# dev-tunnels = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for management API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
